# UnknownPower

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
include/: General.hpp  config.h  general.h
include/components/: build_mode.h  config_struct.h  disassembly_struct.h  dummy_stack.h  ignore_opcode_struct.h  instruction_range_struct.h  instruction_struct.h  output_mode.h  registers_state_struct.h  result_struct.h
injector/src/: main_config.cpp
injector/src/ConfigManager/: ConfigManager.hpp
injector/src/InstructionManager/: Definitions.hpp  InstructionManager.cpp  InstructionManager.hpp
injector/src/Launcher/: Launcher.cpp
injector/src/OutputManager/: OutputManager.cpp
injector/src/ProcessorManager/: ProcessorManager.cpp
sifter/: disassembler.py  errors.py  files.py  gui.py  injector  injector.py  logger.py  poll.py  run.sh  sifter.py  system.py  tests.py  utils.py
src/: main.cpp  main_blacklist.cpp  main_config.cpp
src/Builder/: Builder.cpp  Builder.hpp  Definitions.hpp
src/ConfigManager/: ConfigManager.hpp  Definitions.hpp
src/InstructionManager/: Definitions.hpp  InstructionManager.cpp  InstructionManager.hpp
src/Launcher/: Launcher.cpp  Launcher.hpp
src/OutputManager/: Definitions.hpp  OutputManager.cpp  OutputManager.hpp
src/ProcessorManager/: Definitions.hpp  ProcessorManager.cpp  ProcessorManager.hpp
src/builder/: Builder.cpp  Builder.hpp  Definitions.hpp  builder.c  builder.h
src/config/: ConfigManager.cpp  ConfigManager.hpp  Definitions.hpp
src/fault_handler/: fault_handler.c  fault_handler.h
src/global/: global.c  global.h  global_blacklist.c  global_config.c  global_variables.c  global_variables_linux.c  output.c  output.h  preamble.c
src/helpers/: helpers.c  helpers.h
src/injector/: injector.c  injector.h
src/low_level/: dummy_stack.hpp
src/low_level/fault_handler/: fault_handler.c  fault_handler.h
src/low_level/state_handler/: state_handler.c  state_handler.h
src/state_handler/: state_handler.c  state_handler.h
